feat(state-manager): update API to retrieve city graph instead of district graph
